# kvm-light-manager

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.agent  Dockerfile.api  Makefile  README.md  docker-compose.yml  pyproject.toml
agent/: __init__.py  config.py  handlers.py  main.py  server.py  simulator.py
alembic/: env.py
alembic/versions/: 001_initial.py
app/: __init__.py  main.py
app/api/: dependencies.py  router.py
app/api/endpoints/: health.py  metrics.py  vms.py  websocket.py
app/core/: config.py  constants.py  exceptions.py  logging.py  middleware.py  security.py
app/db/: session.py
app/db/repositories/: __init__.py  vm_repository.py
app/messaging/: __init__.py  client.py  schemas.py
app/models/: vm.py
app/schemas/: common.py  vm.py
app/services/: agent_client.py  redis_client.py  task_manager.py  vm_service.py
docker/agent/: entrypoint.sh
docker/api/: entrypoint.sh
docs/: api_reference.md  architecture.md  operations.md
scripts/: seed_test_data.py  wait-for-it.sh
tests/: conftest.py
tests/contract/: test_agent_contract.py
tests/integration/: test_agent_communication.py  test_vm_creation.py
tests/test_agent/: test_simulator.py
tests/test_api/: test_health.py  test_metrics.py  test_vms.py  test_websocket.py
